--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,9 +31,9 @@
 
   <body>
     <!--
-    {% include header.html %}
+    {% include header.html %} -->
     {% include navigation-sliding.html %}
-	-->
+	
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
