--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
       <div class="wrap page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
         <h2>I'm passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on GitHub</a>
+        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
