mess with home css

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@
 
   </head>
 
-  <body>
+  <body class=".bg-image">
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
