--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -349,3 +349,13 @@
 		}
 	}
 }
+
+/* background image at page top */
+.bg-img {
+	height: 100vh;
+    background: url("img/plant-691971_1280.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
