try to add bg image

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -351,9 +351,9 @@
 }
 
 /* background image at page top */
-.bg-img {
+.bg-image {
 	height: 100vh;
-    background: url("img/plant-691971_1280.jpg") no-repeat center center fixed;
+    background: url("images/plant-691971_1280.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
