--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -352,7 +352,7 @@
 
 /* background image at page top */
 html {
-    background: url("images/plant-691971_1280.jpg") no-repeat center center fixed;
+    background: url("../images/plant-691971_1280.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
