--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,19 +30,13 @@
   </head>
 
   <body class="bg-image">
-  <!--
-    {% if page.image.feature %}
-    -->
-    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
+    <div class="page-lead">
       <div class="wrap page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
         <h2>I'm passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
         <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
-    <!--
-    {% endif %}
-    -->
 
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
