--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -231,7 +231,7 @@
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	text-align: center;
+	text-align: left;
 	color: $white;
 	@include media($large) {
 		background-size: cover;
