--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|PT+Serif|Roboto" rel="stylesheet">
     <!-- HTML5 Shiv and Media Query Support for IE -->
     <!--[if lt IE 9]>
       <script src="{{ site.url }}/js/vendor/html5shiv.min.js"></script>
