--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,8 +6,8 @@
    Typography variables
    ========================================================================== */
 
-$base-font                   	: Georgia,Times,"Times New Roman",serif;
-$heading-font                	: "Helvetica Neue","Segoe UI",Arial,sans-serif;
+$base-font                   	: PT Serif, Noto Serif, serif;
+$heading-font                	: San Francisco,Roboto,Segoe UI,Helvetica Neue,Lucida Grande,sans-serif;
 $caption-font                	: $base-font;
 $code-font                   	: monospace;
 $alt-font                    	: $heading-font;
