--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -228,6 +228,7 @@
 }
 // page lead
 .page-lead {
+	margin-top: 20%;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
