--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,8 +34,8 @@
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
-        <h2>I'm passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on GitHub</a>
+        <h2><a href="{{ site.url }}/about/">I'm a Vermont developer</a> passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
+        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Check out my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 
