un-bold h2 & attempt to fix em in page lead

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,6 +33,7 @@ h2 {
 	font-family: $base-font;
 	text-rendering: optimizeLegibility; // Fix the character spacing for headings
 	@include font-size(32);
+	font-weight: normal;
 }
 h3 {
 	@include font-size(28);
