--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|PT+Serif|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i|PT+Serif:400,400i|Roboto" rel="stylesheet">
     <!-- HTML5 Shiv and Media Query Support for IE -->
     <!--[if lt IE 9]>
       <script src="{{ site.url }}/js/vendor/html5shiv.min.js"></script>
@@ -34,7 +34,7 @@
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
-        <h2><a href="{{ site.url }}/about/">I'm a Vermont developer</a> passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
+        <h2><a href="{{ site.url }}/about/"><em>I'm a Vermont developer</em></a> passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
         <a href="{{ site.url }}/getting-started/" class="btn-inverse">Check out my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
