--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
         <h2><a href="{{ site.url }}/about/"><em>I'm a Vermont developer</em></a> passionate about Python development, JVM languages, data, and functional programming. I'm pretty handy with front-end web development as well.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Check out my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
+        <a href="{{ site.url }}/getting-started/" class="btn-inverse">See my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 
