--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -128,7 +128,9 @@
 
 #page-wrapper {
 	padding: 0 $gutter; // add white space for smaller screens
-	
+	@include media($large) {
+		padding: 0 48px;
+	}
 	@include size(100% 100%);
 	-webkit-overflow-scrolling: touch;
 	z-index: 2;
