--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,6 +34,8 @@ $comp-color                  	: complement($base-color);
 $border-color                	: #ddd;
 $link-color                  	: #fff;
 
+$post-bg-color                : #eee;
+
 $primary-color               	: $black;
 $success-color               	: #2ecc71;
 $warning-color               	: #f1c40f;
