Restore background with different technique

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,6 +31,7 @@
   </head>
 
   <body class="bg-image">
+  <img src="images/plant-691971_1280.jpg" class="bg" />
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
