--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -356,10 +356,25 @@
 }
 
 /* background image at page top */
-html {
-    background: linear-gradient(top, #1e5799 0%,#a5c9e5 100%), url("../images/plant-691971_1280.jpg") no-repeat center center fixed;
+/* html {
+    background: url("../images/plant-691971_1280.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+} */
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
