--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
 
   </head>
 
-  <body>
+  <body class="bg-image">
   <img src="images/plant-691971_1280.jpg" class="bg" />
     <div class="page-lead">
       <div class="page-lead-content">
