--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -355,8 +355,16 @@
 	}
 }
 
-/* background image for pages */
-img .bg {
+/* background image at page top */
+/* html {
+    background: url("../images/plant-691971_1280.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+} */
+
+img.bg {
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
@@ -370,9 +378,5 @@ img .bg {
   top: 0;
   left: 0;
 
-  z-index: -10;
-}
-
-img .bg .slant {
-	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  z-index: -10; 
 }
