pull slant style to separate class

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -364,7 +364,7 @@
     background-size: cover;
 } */
 
-img.bg {
+img .bg {
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
@@ -379,6 +379,8 @@ img.bg {
   left: 0;
 
   z-index: -10; 
+}
 
+img .bg .slant
   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
