Add slanted background to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
   </head>
 
   <body id="js-body">
+  <img src="../images/plant-691971_1280.jpg" class="bg slant" />
     {% include browser-upgrade.html %}
     {% include header.html %}
     {% include navigation-sliding.html %}
