Fix text color on main page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@
             {% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
           </div>
           <div class="archive-wrap">
-            <div class="page-content">
+            <div class="page-content home-content">
               {{ content }}
             </div><!-- /.page-content -->
           </div class="archive-wrap"><!-- /.archive-wrap -->
