--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -335,14 +335,6 @@
 }
 
 /* background image at page top */
-/* html {
-    background: url("../images/plant-691971_1280.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-} */
-
 img.bg {
   /* Set rules to fill background */
   min-height: 100%;
@@ -366,8 +358,5 @@ img.slant {
 
 .home-content {
 	color: white;
-}
-
-.home-content.h3 {
-	margin-bottom: 12px;
+	h3 {margin-bottom: 12px;}
 }
