Move main page content up

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,7 +203,7 @@
 }
 // page lead
 .page-lead {
-	margin-top: 5%;
+	margin-top: 2em;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
