--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,7 +32,7 @@ $caption-color                : mix($white, $text-color, 25%);
 $base-color                  	: #343434;
 $comp-color                  	: complement($base-color);
 $border-color                	: #ddd;
-$link-color                  	: #fff;
+$link-color                  	: #000;
 
 $post-bg-color                : #eee;
 
