--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,5 +1,5 @@
 {% if page.categories and page.categories != empty %}
-  <nav class="breadcrumbs site-title">
+  <nav class="site-title">
     <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="{{ site.url }}" itemprop="url">
         <span itemprop="title">Home</span>
