Move slanted background to include and change relative paths to absolute

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
   </head>
 
   <body id="js-body">
-  <img src="../images/plant-691971_1280.jpg" class="bg slant" />
+    {% include background-image.html %}
     {% include browser-upgrade.html %}
     {% include header.html %}
     {% include navigation-sliding.html %}
