--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
   </head>
 
   <body id="js-body">
+    {% include base.html %}
     {% include background-image.html %}
     {% include browser-upgrade.html %}
     {% include header.html %}
