--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,8 +30,9 @@
 
   </head>
 
-  <body class="bg-image">
-  <img src="/images/plant-691971_1280.jpg" class="bg" />
+  <body class="">
+    {% include base.html %}
+    <img src="{{base}}/images/plant-691971_1280.jpg" class="bg" />
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
