Try fixing relative images another way

--- a/_includes/background-image.html
+++ b/_includes/background-image.html
@@ -1,1 +1,1 @@
-<img src="{{base}}/images/plant-691971_1280.jpg" class="bg slant" />
+<img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg slant" />
