--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@
 
   <body class="">
     {% include base.html %}
-    <img src="{{base}}/images/plant-691971_1280.jpg" class="bg" />
+    <img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg" />
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
