--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,18 @@
-<footer role="contentinfo" id="site-footer">
+{% assign footer_style == "" %}
+{% if page.url == site.url %}
+	{% assign footer_style == "main-footer" %}
+{% endif %}
+
+<footer role="contentinfo" id="site-footer" class="{{ footer_style }}">
 	<nav role="navigation" class="menu bottom-menu">
 		<ul class="menu-item">
 		{% for link in site.data.footer %}
-      {% if link.url contains 'http' %}
-        {% assign domain = '' %}
-        {% else %}
-        {% assign domain = site.url %}
-      {% endif %}
-			<li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+	      {% if link.url contains 'http' %}
+	        {% assign domain = '' %}
+	        {% else %}
+	        {% assign domain = site.url %}
+	      {% endif %}
+		  <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
