Fix conditional in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 {% assign footer_style == "" %}
-{% if page.url == site.url %}
+{% if page.layout == "home" %}
 	{% assign footer_style == "main-footer" %}
 {% endif %}
 
