Test conditional in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
 	{% assign footer_style == "main-footer" %}
 {% endif %}
 
+{{ page.layout }}
+
 <footer role="contentinfo" id="site-footer" class="{{ footer_style }}">
 	<nav role="navigation" class="menu bottom-menu">
 		<ul class="menu-item">
