More footer tests

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {% assign footer_style == "" %}
 {% if page.layout == 'home' %}
 	{% assign footer_style == "main-footer" %}
-	test
+	test {{ footer_style }}
 {% endif %}
 
 {{ footer_style }}
