More footer tests

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-{% assign footer_style == "" %}
+{% assign footer_style == "main-footer" %}
 {% if page.layout == 'home' %}
 	{% assign footer_style == "main-footer" %}
 	test {{ footer_style }}
