Refactor background images

--- a/_includes/background-image.html
+++ b/_includes/background-image.html
@@ -1,1 +1,6 @@
+{% assign background_format = "" %}
+{% if page.layout = "home" %}
+	{% assign background_format = "slant" %}
+{% endif %}
+
 <img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg slant" />
