--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@
   </head>
 
   <body class="">
-    <img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg" />
+    {% include background-image.html %}
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
