Replace faulty endif with endunless

--- a/_includes/background-image.html
+++ b/_includes/background-image.html
@@ -1,6 +1,6 @@
 {% assign background_format = "" %}
 {% unless page.layout == "home" %}
 	{% assign background_format = "slant" %}
-{% endif %}
+{% endunless %}
 
-<img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg {{ background_format }}" />
+<img src="{{ site.url }}/images/plant-691971_1280.jpg" class="bg {{ background_format }}" /> 
