Fix work link on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
         <h2><a href="{{ site.url }}/about/"><em>I'm a Vermont developer</em></a> passionate about Python development, Java &amp; other JVM languages, data, and functional programming.</h2>
-        <a href="{{ site.url }}/media/" class="btn-inverse">See my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
+        <a href="{{ site.url }}/work/" class="btn-inverse">See my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 
