Fix link color on main page buttons

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -247,8 +247,11 @@
 			@include font-size(32);
 		}
 	}
-	a {
-		color: #fff;
+	lead-link {
+		color: $white;
+	}
+	btn-inverse {
+		color: $text-color;
 	}
 }
 // page header
