--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -239,6 +239,7 @@
 		}
 	}
 	h2 {
+		
 		@include font-size(20);
 		@include media($medium) {
 			@include font-size(24);
@@ -247,11 +248,8 @@
 			@include font-size(32);
 		}
 	}
-	lead-link {
+	.lead-link {
 		color: $white;
-	}
-	btn-inverse {
-		color: $text-color;
 	}
 }
 // page header
@@ -367,7 +365,7 @@ img.slant {
 }
 
 .home-content {
-	color: white;
+	color: $white;
 	h3 {margin-bottom: 12px;}
-	a {color: #fff;}
+	a {color: $white;}
 }
