--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -265,6 +265,13 @@
 	position: relative;
 	margin-left: -1 * $gutter;
 	margin-right: -1 * $gutter;
+	max-height: 6em;
+	overflow: hidden;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
+
 	// feature image caption
 	.image-credit {
 		position: absolute;
