Fix positioning of feature images

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -267,10 +267,13 @@
 	margin-right: -1 * $gutter;
 	max-height: 6em;
 	overflow: hidden;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-  	transform: translateY(-50%);
+
+	img {
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+	  	transform: translateY(-50%);
+  	}
 
 	// feature image caption
 	.image-credit {
