--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,5 +1,5 @@
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="{{ site.url }}images/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ site.url }}images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="{{ site.url }}/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ site.url }}/images/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="{{ site.url }}/manifest.json">
-    <link rel="mask-icon" href="{{ site.url }}images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="{{ site.url }}/images/safari-pinned-tab.svg" color="#5bbad5">
