Shrink site title at medium width

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,6 +20,9 @@
 }
 .site-title {
 	@include row;
+	@include media($medium) {
+		@include span-columns(4);
+	}
 	@include media($large) {
 		@include span-columns(4);
 	}
