Re-align top menu on medium

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,7 +20,7 @@
 }
 .site-title {
 	@include row;
-	@include media($medium) {
+	@include media($medium	) {
 		@include span-columns(4);
 	}
 	@include media($large) {
@@ -90,7 +90,11 @@
 	display: none;
 	position: relative;
 	@include media($medium) {
-		@include span-columns(12);
+		@include span-columns(7);
+		ul {
+			position: absolute;
+			right: 0;
+		}
 	}
 	@include media($large) {
 		@include span-columns(7);
