--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -373,18 +373,19 @@ img.bg {
 img.slant {
   -webkit-clip-path: polygon(80% 0%, 100% 0%, 100% 100%, 90% 100%);
   clip-path: polygon(80% 0%, 100% 0%, 100% 100%, 90% 100%);
+}
 
-  /* Fix for browsers without clip-path support */
-  &:after {
-	min-height: 100%;
-	min-width: 80%;
-	width: 80%;
-	height: auto;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: white;
-  }
+/* Fix for browsers without clip-path support */
+.clipless {
+  min-height: 100%;
+  min-width: 80%;
+  width: 80%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  z-index: -8;
 }
 
 .home-content {
