--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -376,7 +376,7 @@ img.slant {
 }
 
 /* Fix for browsers without clip-path support */
-.clipless {
+#clipless {
   min-height: 100%;
   min-width: 80%;
   width: 80%;
