--- a/_includes/background-image.html
+++ b/_includes/background-image.html
@@ -7,6 +7,13 @@
 
 {% unless page.layout == "home" %}
 	<!-- Fix clip-path for Firefox -->
+	<svg width="0" height="0">
+	  <defs>
+		<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
+		  <polygon points=".9 0, .8 0, 1 0, 1 1" />
+		</clipPath>
+	  </defs>
+	</svg>
 
 	<!-- Fix page legibility for browsers without clip-path -->
 	<div id="clipless"></div>
