--- a/_includes/background-image.html
+++ b/_includes/background-image.html
@@ -10,7 +10,7 @@
 	<svg width="0" height="0">
 	  <defs>
 		<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
-		  <polygon points=".9 0, .8 0, 1 0, 1 1" />
+		  <polygon points=".8 0, 1 0, 1 1, .9 1" />
 		</clipPath>
 	  </defs>
 	</svg>
