--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,3 +13,14 @@
 	</nav><!-- /.bottom-menu -->
 	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com">Jekyll</a> + <a href="http://mmistakes.github.io/skinny-bones-jekyll/">Skinny Bones</a>.</p>
 </footer>
+
+{% unless page.layout == "home" %}
+	<!-- Fix clip-path for Firefox. Needs to be down here so it won't screw up element positioning. -->
+	<svg width="0" height="0">
+	  <defs>
+		<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
+		  <polygon points=".8 0, 1 0, 1 1, .9 1" />
+		</clipPath>
+	  </defs>
+	</svg>
+{% endunless %}
