--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -74,7 +74,6 @@
 			}
 			&:after {
 				width: 0;
-				background: $black;
 			}
 			&:active:after,
 			&:hover:after {
@@ -114,6 +113,11 @@
 			line-height: .5 * $masthead-height; // half the height to center vertically
 			color: $black;
 			text-transform: uppercase;
+
+			// Define color for line hover effect
+			&:after {
+				background: $black;
+			}
 		}
 	}
 }
@@ -123,8 +127,15 @@
 .bottom-menu {
 	@include clearfix;
 	font-weight: 700;
-	a {
-		color: lighten($black,60);
+	li {
+		a {
+			color: lighten($black,60);
+
+			// Define color for line hover effect
+			&:after {
+				color: lighten($black, 60);
+			}
+		}
 	}
 }
 
