Try another fix for bottom menu hover effect

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -50,36 +50,6 @@
 				margin-right: 0; // remove spacing from last menu link
 			}
 		}
-		a {
-			// line hover effect
-			position: relative;
-			display: block;
-			margin-right: $gutter;
-			padding: (.25 * $masthead-height) 0 (.25 * $masthead-height) ;
-			height: $masthead-height;
-			font-family: $alt-font;
-			&:before,
-			&:after {
-				content: '';
-				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
-				height: 2px;
-				@include transition(width 0.3s);
-			}
-			&:before {
-				width: 100%;
-				background: transparent;
-			}
-			&:after {
-				width: 0;
-			}
-			&:active:after,
-			&:hover:after {
-				width: 100%;
-			}
-		}
 	}
 }
 
@@ -114,9 +84,34 @@
 			color: $black;
 			text-transform: uppercase;
 
-			// Define color for line hover effect
+			// line hover effect
+			position: relative;
+			display: block;
+			margin-right: $gutter;
+			padding: (.25 * $masthead-height) 0 (.25 * $masthead-height) ;
+			height: $masthead-height;
+			font-family: $alt-font;
+			&:before,
 			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 2px;
+				@include transition(width 0.3s);
+			}
+			&:before {
+				width: 100%;
+				background: transparent;
+			}
+			&:after {
+				width: 0;
 				background: $black;
+			}
+			&:active:after,
+			&:hover:after {
+				width: 100%;
 			}
 		}
 	}
@@ -127,13 +122,39 @@
 .bottom-menu {
 	@include clearfix;
 	font-weight: 700;
+
 	li {
 		a {
 			color: lighten($black,60);
 
-			// Define color for line hover effect
+			// line hover effect
+			position: relative;
+			display: block;
+			margin-right: $gutter;
+			padding: (.25 * $masthead-height) 0 (.25 * $masthead-height) ;
+			height: $masthead-height;
+			font-family: $alt-font;
+			&:before,
 			&:after {
-				color: lighten($black, 60);
+				content: '';
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 2px;
+				@include transition(width 0.3s);
+			}
+			&:before {
+				width: 100%;
+				background: transparent;
+			}
+			&:after {
+				width: 0;
+				background: lighten($black,60);
+			}
+			&:active:after,
+			&:hover:after {
+				width: 100%;
 			}
 		}
 	}
