--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -18,3 +18,4 @@
 	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:image" content="{% if page.image.teaser %}{{ site.url }}/images/{{ page.image.teaser }}{% else %}{{ site.url }}/images/{{ site.logo }}{% endif %}">
+	<meta property="fb:app_id" content="1757092571273930">
