--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -17,5 +17,5 @@
 	{% if page.excerpt %}<meta property="og:description" content="{{ page.excerpt | strip_html }}">{% endif %}
 	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 	<meta property="og:site_name" content="{{ site.title }}">
-	<meta property="og:image" content="{% if page.image.teaser %}{{ site.url }}/images/{{ page.image.teaser }}{% else %}{{ site.url }}/images/{{ site.logo }}{% endif %}">
+	<meta property="og:image" content="{% if page.image.teaser %}{{ site.url }}/images/{{ page.image.teaser }}{% else %}{{ site.url }}/images/{{ site.teaser }}{% endif %}">
 	<meta property="fb:app_id" content="1757092571273930">
