--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
     <div class="page-lead">
       <div class="page-lead-content">
         <h1>Hannah Vivian Shaw</h1>
-        <h2><a href="{{ site.url }}/about/" class="lead-link"><em>I'm a Vermont developer</em></a> passionate about Python development, Java &amp; other JVM languages, machine learning, and functional programming.</h2>
+        <h2><a href="{{ site.url }}/about/" class="lead-link"><em>I'm a Vermont developer</em></a> working in Python, Javascript, &amp; Java. I'm into machine learning, web development, and functional programming.</h2>
         <a href="{{ site.url }}/work/" class="btn-inverse">See my work</a> &nbsp; or &nbsp; <a href="https://github.com/vivshaw/" class="btn-inverse">Find me on GitHub</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
