--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -19,3 +19,5 @@
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:image" content="{% if page.image.teaser %}{{ site.url }}/images/{{ page.image.teaser }}{% else %}{{ site.url }}/images/{{ site.teaser }}{% endif %}">
 	<meta property="fb:app_id" content="1757092571273930">
+	<!-- Google verification -->
+	<meta name="google-site-verification" content="s3cKVpnqdnkp6HL-Tcf5wXw6F5sO2eQeL_pzBqXrWE8" />
