--- a/packages/basalt-mdx/Image/Image.module.css
+++ b/packages/basalt-mdx/Image/Image.module.css
@@ -6,7 +6,7 @@
   max-width: 100%;
 
   @mixin tablet {
-    border-radius: var(--basalt-sizing-1);
+    border-radius: var(--basalt-sizing-radius-small);
   }
 
   @mixin desktop {
