--- a/packages/basalt-mdx/MdxBody/MdxBody.module.css
+++ b/packages/basalt-mdx/MdxBody/MdxBody.module.css
@@ -74,7 +74,7 @@
       outline: var(--basalt-sizing-half) solid
         var(--basalt-color-accent-default);
       outline-offset: var(--basalt-sizing-half);
-      border-radius: var(--basalt-sizing-1);
+      border-radius: var(--basalt-sizing-radius-small);
     }
   }
 
@@ -161,7 +161,7 @@
    */
   & :not(pre) > code {
     background: rgba(101, 117, 133, 0.16);
-    border-radius: var(--basalt-sizing-2);
+    border-radius: var(--basalt-sizing-radius-default);
     font-family: var(--basalt-font-monospace);
     font-size: 0.875em;
     padding: var(--basalt-sizing-half) var(--basalt-sizing-1);
