--- a/packages/basalt/css/mixins.css
+++ b/packages/basalt/css/mixins.css
@@ -90,7 +90,7 @@
 /* ===== focus ring ===== */
 
 @define-mixin focus-ring {
-  border-radius: var(--basalt-sizing-1);
+  border-radius: var(--basalt-sizing-radius-small);
 
   &:focus-visible {
     outline: var(--basalt-sizing-half) solid var(--basalt-color-accent-default);
