--- a/packages/basalt-mdx/Blockquote/Blockquote.module.css
+++ b/packages/basalt-mdx/Blockquote/Blockquote.module.css
@@ -13,11 +13,11 @@
     margin: 0 auto var(--basalt-sizing-8);
   }
 
-  @mixin dark-mode {
+  @mixin dark-theme {
     background-image: url("data:image/svg+xml,%3Csvg width='8' height='10' viewBox='0 0 8 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='12' height='1.5' transform='rotate(60 0 0)' fill='%2350525B'/%3E%3C/svg%3E");
   }
 
-  @mixin light-mode {
+  @mixin light-theme {
     background-image: url("data:image/svg+xml,%3Csvg width='8' height='10' viewBox='0 0 8 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='12' height='1.5' transform='rotate(60 0 0)' fill='%232D2E33'/%3E%3C/svg%3E");
   }
 
