--- a/packages/basalt-mdx/MdxBody/MdxBody.module.css
+++ b/packages/basalt-mdx/MdxBody/MdxBody.module.css
@@ -86,11 +86,11 @@
     background-position: top;
     background-repeat: repeat-x;
 
-    @mixin dark-mode {
+    @mixin dark-theme {
       background-image: url("data:image/svg+xml,%3Csvg width='10' height='15' viewBox='0 0 10 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.432617' y='13.8564' width='16' height='1' transform='rotate(-60 0.432617 13.8564)' fill='%2350525B'/%3E%3C/svg%3E");
     }
 
-    @mixin light-mode {
+    @mixin light-theme {
       background-image: url("data:image/svg+xml,%3Csvg width='10' height='15' viewBox='0 0 10 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.567383' y='14.1777' width='16' height='1' transform='rotate(-60 0.567383 14.1777)' fill='%232D2E33'/%3E%3C/svg%3E");
     }
   }
@@ -186,11 +186,11 @@
     background-position: left;
     background-repeat: repeat-y;
 
-    @mixin dark-mode {
+    @mixin dark-theme {
       background-image: url("data:image/svg+xml,%3Csvg width='8' height='10' viewBox='0 0 8 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='12' height='1.5' transform='rotate(60 0 0)' fill='%2350525B'/%3E%3C/svg%3E");
     }
 
-    @mixin light-mode {
+    @mixin light-theme {
       background-image: url("data:image/svg+xml,%3Csvg width='8' height='10' viewBox='0 0 8 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='12' height='1.5' transform='rotate(60 0 0)' fill='%232D2E33'/%3E%3C/svg%3E");
     }
 
